Bug 1086674 - [2.1][l10n][Contacts] Multiple locales: The 'Add Picture' string is truncated on 'Add contact' screen.

--- a/apps/communications/contacts/style/app.css
+++ b/apps/communications/contacts/style/app.css
@@ -460,7 +460,7 @@ li button.icon-find-and-merge:before {
 .fillflow-media p em {
   display: block;
   color: #858585;
-  font-size: 1.4rem;
+  font-size: 1.1rem;
   font-weight: normal;
   font-style: italic;
   margin-top: 1.8rem;
